--- a/style.css
+++ b/style.css
@@ -1,6 +1,30 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+h1 {
+    font-size: 30px;
+    font-weight: 100;
+    line-height: 24px;
+    color: #216B76;
+    margin-bottom: 0;
+}
+ul {
+    margin:0;
+    padding:0;
+}
+li {
+    font-size: 16px;
+    list-style: none;
+    color: #298AAE;
+    margin: 0;
+    padding: 0;
+
+}
 .weather-app {
     max-width: 600px;
-    margin: 0 auto;
+    margin: 30px auto;
     padding: 20px;
     border: 1px solid #DADCE0;
+    border-radius: 7px;
+    background-color: #DFC2BE;
 }
