--- a/style.css
+++ b/style.css
@@ -1,44 +1,43 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 h1 {
-    font-size: 30px;
-    font-weight: 100;
-    line-height: 24px;
-    color: #60436B;
-    margin-bottom: 0;
+  font-size: 30px;
+  font-weight: 100;
+  line-height: 24px;
+  color: #60436b;
+  margin-bottom: 0;
 }
 ul {
-    margin:0;
-    padding:0;
+  margin: 0;
+  padding: 0;
 }
 li {
-    font-size: 16px;
-    list-style: none;
-    color: #60436B;
-    margin: 0;
-    padding: 0;
-
+  font-size: 16px;
+  list-style: none;
+  color: #60436b;
+  margin: 0;
+  padding: 0;
+  text-transform: capitalize;
 }
 .weather-app {
-    max-width: 600px;
-    margin: 30px auto;
-    padding: 20px;
-    border: 1px solid #DADCE0;
-    border-radius: 7px;
-    background-color: #FAF3FD;
+  max-width: 600px;
+  margin: 30px auto;
+  padding: 20px;
+  border: 1px solid #dadce0;
+  border-radius: 7px;
+  background-color: #faf3fd;
 }
-.weather-temperature img{
-width: 64px;
-height: 64px;
-margin-right: 10px;
+.weather-temperature img {
+  width: 64px;
+  height: 64px;
+  margin-right: 10px;
 }
 .weather-temperature strong {
-    font-weight: 400;
-    font-size: 50px;
+  font-weight: 400;
+  font-size: 50px;
 }
-.weather-temperature .units{
-    position: relative;
-    top: -26px;
-
+.weather-temperature .units {
+  position: relative;
+  top: -26px;
 }
